# sqlite-otel

./: .dockerignore  .gitignore  AUTHORS  CLAUDE.md  DATA_INTEGRITY.md  DEDUPLICATION.md  DOCKER.md  DevJournal.md  Dockerfile  INSTALL  LICENSE  Makefile  Makefile.am  NEWS  PERFORMANCE.md  README.md  autogen.sh  check-logs.go  check-logs.sql  code_review_feedback_pr52.md  configure.ac  docker-compose.yml  go.mod  inspect-db.go.bak  install-service.sh  main.go  main_test.go  mkdocs.yml  otel-collector.db  otel-sqlite-schema.md  sqlite-otel-collector.service  test-commands.sh  test-logs.sh  test-metrics-gauge.sh  test-metrics-histogram.sh  test-metrics-invalid.sh  test-metrics-sum.sh
.circleci/: README.md  config.yml
.claude/: impl.md
database/: db.go  helpers.go  logs.go  logs_test.go  metrics.go  shared.go  traces.go
docs/: DOCUMENTATION_PATTERNS.md  PPA-SETUP.md  README.md  api.md  cli.md  configuration.md  deployment.md  docs.js  index.html  index.md  installation.md  quickstart.md
docs/installation/: README.md
handlers/: common.go  handler_common.go  logs.go  metrics.go  traces.go
homebrew/: README.md  sqlite-otel-collector.rb  validate-formula.sh
logging/: logger.go  rotation.go  rotation_test.go
packaging/: README.md  build-deb.sh
packaging/deb/: control  copyright  postinst  preinst  rules
packaging/rpm/: sqlite-otel-collector.spec  sqlite-otel-collector.sysusers  sqlite-otel-collector.yaml
packaging/scripts/: build-deb.sh  build-rpm.sh
packaging/systemd/: sqlite-otel-collector.service
scripts/: build-for-ppa.sh  create-release-archives.sh  setup-ppa-environment.sh
site/: index.html
site/css/: style.css
site/js/: main.js
tools/: read_telemetry.go
